--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                       <a class=" enlaces" href="#">Conviertete en orador</a>
                   </li>
                   <li class="nav-item">
-                      <a class="enlaces--active" href="">Comprar Ticket</a>
+                      <a class="enlaces--active" href="./tikets.html">Comprar Ticket</a>
                   </li>
                 </ul>
               </div>
